Instant Address Standard/main/default/objects/Parameter__c/Parameter__c.object-meta.xml
<CustomObject>
    <description>Parameter</description>
    <label>Parameter</label>
    <nameField>
        <label>Parameter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parameters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>