Instant Address Standard/main/default/objects/Parameter__c/fields/ENVIRONMENT__c.field-meta.xml
<CustomField>
    <fullName>ENVIRONMENT__c</fullName>
    <description>ENVIRONMENT</description>
    <label>ENVIRONMENT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>