Instant Address Standard/main/default/objects/Parameter__c/fields/FORMATID__c.field-meta.xml
<CustomField>
    <fullName>FORMATID__c</fullName>
    <label>Format Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>