Instant Address Standard/main/default/objects/Parameter__c/fields/LICENSEKEY__c.field-meta.xml
<CustomField>
    <fullName>LICENSEKEY__c</fullName>
    <description>LICENSEKEY</description>
    <label>LICENSEKEY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>