Instant Address Standard/main/default/objects/Parameter__c/fields/PARAMETERID__c.field-meta.xml
<CustomField>
    <fullName>PARAMETERID__c</fullName>
    <description>PARAMETERID</description>
    <label>PARAMETERID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>