Instant Address Standard/main/default/objects/Parameter__c/fields/PASSWORD__c.field-meta.xml
<CustomField>
    <fullName>PASSWORD__c</fullName>
    <description>PASSWORD</description>
    <label>PASSWORD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>