Instant Address Standard/main/default/objects/Parameter__c/fields/TOKEN__c.field-meta.xml
<CustomField>
    <fullName>TOKEN__c</fullName>
    <label>TOKEN</label>
    <length>200</length>
    <type>Text</type>
</CustomField>