Instant Address Standard/main/default/objects/Parameter__c/fields/TOKEN_EXPIRATION__c.field-meta.xml
<CustomField>
    <fullName>TOKEN_EXPIRATION__c</fullName>
    <label>TOKEN_EXPIRATION</label>
    <length>100</length>
    <type>Text</type>
</CustomField>