Instant Address Standard/main/default/objects/Parameter__c/fields/USERNAME__c.field-meta.xml
<CustomField>
    <fullName>USERNAME__c</fullName>
    <description>USERNAME</description>
    <label>USERNAME</label>
    <length>20</length>
    <type>Text</type>
</CustomField>